<resources>
    <string name="app_name">Sky Gym</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign up</string>

    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm password</string>

    <string name="login_to_account">Login to your account</string>
    <string name="create_account">Create a new account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="fitness_text">Fitness Home</string>
    <string name="gym_bio">Thank you for choosing us.</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="or">or</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="language">Language</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_instructors">Instructors</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_profile">Save</string>
    <string name="title_activity_login2">Login2</string>
    <string name="title_activity_register2">Register2</string>
</resources>
